base for routing

--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -5,6 +5,8 @@
     overflow: hidden;
     color: #212121;
     margin-bottom: 350px;
+    margin-right: -15px;
+    
     >.networks{
 
         .networks-continer{
