--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -60,9 +60,24 @@
       position: relative;
       line-height: 1.4;
 
+      
+
       > span {
         font-weight: bold;
         font-size: 304px;
+        z-index: 1;
+        &:first-child::before{
+          content: '';
+          width: 275px;
+          height: 275px;
+          border-radius: 50%;
+          background-color: rgba(41, 120, 255, 0.16);
+          box-shadow: 0px 0px 0px 52px rgba(41, 120, 255, 0.08);
+          position: absolute;
+          left: 10%;
+          top: 37%;
+          z-index: -999;
+        }
       }
 
       .circle {
@@ -70,18 +85,8 @@
         height: 160px;
         margin-top: 35px;
         transition: clip-path 0.2s;
-
-        &::before{
-          content: '';
-          width: 275px;
-          height: 275px;
-          border-radius: 50%;
-          background-color: rgba(41, 120, 255, 0.16);
-          position: absolute;
-          z-index: -999;
-          transform: translate(-60px, -60px);
-          box-shadow:  0px 0px 0px 52px rgba(41, 120, 255, 0.08);
-        }
+        z-index: 5;
+        
 
         .neural {
           position: fixed;
@@ -90,7 +95,7 @@
 					right: 0;
 					height: 100vh;
           overflow: hidden;
-
+          z-index: 999;
           &.scroll-x {
             overflow-y: auto;
           }
