add retyping AI

--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -1,7 +1,7 @@
 .section-services {
     padding-left: calc(275px - 65px);
-    margin-bottom: 145px;
-    margin-top: 15vh;
+    padding-bottom: 145px;
+    padding-top: 15vh;
     
     .cards-services {
         display: flex;
