--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,29 @@
+.AI {
+    height: calc(50vh - 60px);
+    display: flex;
+    align-items: flex-end;
+    padding-left: 273px;
+
+    >p{
+        width: 760px;
+        font-size: 80px;
+        font-weight: bold;
+        position: relative;
+
+        &::before{
+            content: "";
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            background-color: $lightblue;
+            position: absolute;
+            left: -77px;
+            top: 38px;
+            box-shadow: 0px 0px 0px 20px rgba(41, 120, 255, 0.54);
+
+        }
+    }
+}
 
 .home{
     color: #ffffff;
@@ -6,62 +32,37 @@
     padding: 0px;
     overflow: hidden;
 
-    .home-route-enter {
-        // position: absolute;
-        float: right;
-        opacity: 0;
+    >div:first-of-type {
+        position: relative;
+    }
 
+    .home-route-enter {
+        position: absolute;
+        opacity: 0;
+        
         &.home-route-enter-active {
             opacity: 1;
-            transition: opacity 1s;
-            transition-delay: .5s;
+            transition: opacity .5s;
+            transition-delay: .25s;
         }
     }
     .home-route-exit {
-        position: absolute;
-        opacity: 1;
-        
+        opacity: 1;   
+
         &.home-route-exit-active {
             opacity: 0;
-            transition: opacity .5s;
-        }
-    }
-
-    .title{
-        height: calc(50vh - 60px);
-        display: flex;
-        align-items: flex-end;
-        padding-left: 273px;
-
-        >p{
-            width: 760px;
-            font-size: 80px;
-            font-weight: bold;
-            position: relative;
-
-            &::before{
-                content: "";
-                width: 28px;
-                height: 28px;
-                border-radius: 50%;
-                background-color: $lightblue;
-                position: absolute;
-                left: -77px;
-                top: 38px;
-                box-shadow: 0px 0px 0px 20px rgba(41, 120, 255, 0.54);
-
-            }
+            transition: opacity .25s;
         }
     }
 }
 
 @media only screen and (max-width: 1200px){
-    .home{
+    .home {
 
-        .title{
+        .title {
             padding: 0;
 
-            p{
+            p {
                 width: auto;
                 text-align: center;
             }
