--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -1,13 +1,12 @@
 .scroll-section {
   display: flex;
-  overflow-x: auto;
-  overflow-y: hidden;
-  height: calc(100vh + 15px);
-  margin-bottom: -15px;
+  overflow: hidden;
+  height: 100vh;
 
   >.cards{
     display: flex;
     padding-left: 273px;
+    margin-bottom: -15px;
 
     & > div:last-child {
       padding-right: calc(50vw - 439.89px - 80px);
@@ -56,8 +55,6 @@
       align-items: center;
       position: relative;
       line-height: 1.4;
-
-
 
       > span {
         font-weight: bold;
