--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,7 +19,7 @@
 
 // elements of page //
 @import "header";
-//@import "header-of-neural";
+@import 'AI';
 @import "scroll-section";
 //                 //
 
