--- a/docs/style.css
+++ b/docs/style.css
@@ -588,6 +588,7 @@
   display: flex;
   align-items: flex-start;
   padding-left: 273px;
+  pointer-events: none;
   transform: translateY(100px); }
   .AI > p {
     width: 760px;
