add pulsation circle

--- a/docs/style.css
+++ b/docs/style.css
@@ -588,26 +588,72 @@
   display: flex;
   align-items: flex-start;
   padding-left: 273px;
-  pointer-events: none;
-  transform: translateY(100px); }
+  transform: translateY(100px);
+  position: relative; }
+  .AI .pulsatingCircle {
+    width: 25px;
+    height: 25px;
+    display: block;
+    position: relative;
+    transform: scale(5, 5) translate(-12px, 6px); }
+  .AI .firstCircle,
+  .AI .secondCircle,
+  .AI .thirdCircle {
+    top: 50%;
+    left: 50%;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    vertical-align: middle; }
+  .AI .firstCircle {
+    width: 10px;
+    height: 10px;
+    margin: -5px 0 0 -5px;
+    background-color: #2979ff; }
+  .AI .secondCircle {
+    width: 16px;
+    height: 16px;
+    margin: -11px 0 0 -11px;
+    border: 3px solid rgba(41, 120, 255, 0.54);
+    animation: 2000ms pulseIn ease-in-out infinite; }
+
+@keyframes pulseIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.2, 0.2); }
+  50% {
+    opacity: 1;
+    transform: scale(1, 1); }
+  100% {
+    opacity: 0;
+    transform: scale(0.2, 0.2); } }
+
+@-webkit-keyframes pulseIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.2, 0.2); }
+  50% {
+    opacity: 1;
+    transform: scale(1, 1); }
+  100% {
+    opacity: 0;
+    transform: scale(0.2, 0.2); } }
+  .AI .thirdCircle {
+    width: 24px;
+    height: 24px;
+    border: 3px solid rgba(41, 120, 255, 0.54);
+    margin: -15px 0 0 -15px;
+    animation: 2000ms pulseIn 500ms ease-in-out infinite;
+    -webkit-animation: 2000ms pulseIn 500ms ease-in-out infinite; }
   .AI > p {
     width: 760px;
     font-size: 80px;
     font-weight: bold;
     position: relative; }
-    .AI > p::before {
-      content: "";
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background-color: #2979ff;
-      position: absolute;
-      box-shadow: 0px 0px 0px 20px rgba(41, 120, 255, 0.54);
-      transform: translate(-64px, 32px); }
 
 @media only screen and (max-width: 1200px) {
   .AI {
-    padding-left: 70px; }
+    padding-left: 100px; }
     .AI p {
       width: auto;
       text-align: center; } }
@@ -615,7 +661,17 @@
 @media only screen and (max-width: 807px) {
   .AI {
     height: auto;
-    margin-top: 100px; } }
+    margin-top: 100px;
+    transform: none;
+    padding-left: 0; } }
+
+@media only screen and (max-width: 425px) {
+  .AI {
+    margin-top: 120px;
+    margin-bottom: 120px;
+    padding-left: 0; }
+    .AI p {
+      font-size: 60px; } }
 
 .scroll-section {
   display: flex;
@@ -635,14 +691,14 @@
         margin-right: 40px; }
       .scroll-section > .cards .card-home > div {
         width: 280px; }
-        .scroll-section > .cards .card-home > div span {
+        .scroll-section > .cards .card-home > div > span {
           font-size: 15px;
           opacity: .3; }
-        .scroll-section > .cards .card-home > div p {
+        .scroll-section > .cards .card-home > div > p {
           font-size: 24px;
           font-weight: bold;
           margin: 8px 0 0 0; }
-        .scroll-section > .cards .card-home > div small {
+        .scroll-section > .cards .card-home > div > small {
           display: inline-block;
           margin: 24px 0 74px 0; }
         .scroll-section > .cards .card-home > div .arrow {
@@ -687,9 +743,12 @@
           right: 0;
           height: 100vh;
           overflow: hidden;
-          z-index: 999; }
+          z-index: 999;
+          margin-bottom: 350px; }
           .scroll-section > .cards .borvo .circle .neural.scroll-x {
             overflow-y: auto; }
+          .scroll-section > .cards .borvo .circle .neural .networks .networks-container {
+            line-height: 1; }
 
 .scroll-hidden {
   overflow: hidden; }
@@ -713,13 +772,13 @@
 
 @media only screen and (max-width: 630px) {
   .scroll-section {
+    height: auto;
     display: flex;
     justify-content: center; }
     .scroll-section .cards {
-      height: auto;
-      overflow: visible;
-      margin-bottom: 50px;
-      flex-direction: column; }
+      flex-direction: column;
+      padding: 0;
+      margin: 0; }
       .scroll-section .cards .card-home {
         flex-direction: column;
         margin: 0; }
@@ -785,7 +844,8 @@
   margin-bottom: 350px; }
   .neural > .networks .networks-container {
     margin-top: 100px;
-    text-align: center; }
+    text-align: center;
+    line-height: 1; }
     .neural > .networks .networks-container h1 {
       margin: 0;
       font-size: 64px;
@@ -807,7 +867,6 @@
         color: #212121; }
       .neural > .networks .networks-container div a {
         display: flex;
-        justify-content: center;
         color: white;
         text-decoration: none;
         color: #212121; }
@@ -818,7 +877,9 @@
           height: 20px;
           border: 1px solid #212121;
           border-radius: 50%;
-          margin-left: 10px; }
+          margin-left: 10px;
+          display: flex;
+          justify-content: center; }
           .neural > .networks .networks-container div a span .arrow {
             width: 15px; }
   .neural .video-section {
@@ -902,6 +963,8 @@
   display: none; }
 
 @media only screen and (max-width: 1100px) {
+  .neural .skills {
+    flex-wrap: wrap; }
   .neural footer .container {
     width: 720px;
     flex-direction: column; }
