fix @media and pulsation

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -44,3 +44,13 @@
     }
 }
 
+@media only screen and (max-width: 630px){
+    .home{
+        .web-gl{
+            #vanta-net{
+                right: 0;
+            }
+        }
+        
+    }
+}
