--- a/docs/style.css
+++ b/docs/style.css
@@ -594,8 +594,7 @@
     width: 25px;
     height: 25px;
     display: block;
-    position: relative;
-    transform: scale(5, 5) translate(-12px, 6px); }
+    transform: scale(4, 4) translate(-18px, 9px); }
   .AI .firstCircle,
   .AI .secondCircle,
   .AI .thirdCircle {
@@ -606,14 +605,14 @@
     position: absolute;
     vertical-align: middle; }
   .AI .firstCircle {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     margin: -5px 0 0 -5px;
     background-color: #2979ff; }
   .AI .secondCircle {
-    width: 16px;
-    height: 16px;
-    margin: -11px 0 0 -11px;
+    width: 12px;
+    height: 12px;
+    margin: -10px 0 0 -10px;
     border: 3px solid rgba(41, 120, 255, 0.54);
     animation: 2000ms pulseIn ease-in-out infinite; }
 
@@ -627,22 +626,11 @@
   100% {
     opacity: 0;
     transform: scale(0.2, 0.2); } }
-
-@-webkit-keyframes pulseIn {
-  0% {
-    opacity: 0;
-    transform: scale(0.2, 0.2); }
-  50% {
-    opacity: 1;
-    transform: scale(1, 1); }
-  100% {
-    opacity: 0;
-    transform: scale(0.2, 0.2); } }
   .AI .thirdCircle {
-    width: 24px;
-    height: 24px;
-    border: 3px solid rgba(41, 120, 255, 0.54);
-    margin: -15px 0 0 -15px;
+    width: 16px;
+    height: 16px;
+    border: 4px solid rgba(41, 120, 255, 0.54);
+    margin: -13px 0 0 -13px;
     animation: 2000ms pulseIn 500ms ease-in-out infinite; }
   .AI > p {
     width: 760px;
@@ -653,9 +641,10 @@
 @media only screen and (max-width: 1200px) {
   .AI {
     padding-left: 100px; }
+    .AI .pulsatingCircle {
+      transform: scale(4, 4) translate(-6px, 9px); }
     .AI p {
-      width: auto;
-      text-align: center; } }
+      width: auto; } }
 
 @media only screen and (max-width: 807px) {
   .AI {
@@ -663,6 +652,12 @@
     margin-top: 100px;
     transform: none;
     padding-left: 0; } }
+
+@media only screen and (max-width: 800px) {
+  .AI {
+    padding-left: 80px; }
+    .AI p {
+      font-size: 70px; } }
 
 @media only screen and (max-width: 425px) {
   .AI {
@@ -773,7 +768,9 @@
   .scroll-section {
     height: auto;
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    margin-top: 120px;
+    margin-bottom: 150px; }
     .scroll-section .cards {
       flex-direction: column;
       padding: 0;
@@ -794,6 +791,10 @@
         .scroll-section .cards .borvo span {
           font-size: 123px;
           line-height: .7; }
+          .scroll-section .cards .borvo span:first-of-type::before {
+            width: 140px;
+            height: 140px;
+            transform: translate(-25.5%, 54%); }
         .scroll-section .cards .borvo .circle {
           width: 90px;
           height: 90px;
@@ -834,6 +835,10 @@
     .home .home-route-exit.home-route-exit-active {
       opacity: 0;
       transition: opacity .25s; }
+
+@media only screen and (max-width: 630px) {
+  .home .web-gl #vanta-net {
+    right: 0; } }
 
 .neural {
   font-family: 'Proxima Nova Rg';
