--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -10,8 +10,8 @@
         width:25px;
         height:25px;
         display:block;
-        position:relative;
-        transform:scale(5,5) translate(-12px, 6px) ;
+        // position: absolute ;
+        transform:scale(4,4) translate(-18px, 9px) ;
     }
 
     .firstCircle,
@@ -24,21 +24,20 @@
         position:absolute;
         vertical-align:middle;
     }
-        
+
     .firstCircle{
-        width:10px;
-        height:10px;
+        width:8px;
+        height:8px;
         margin:-5px 0 0 -5px;
         background-color: $lightblue;
     }
     
     .secondCircle{
-        width:16px;
-        height:16px;
-        margin:-11px 0 0 -11px;
+        width:12px;
+        height:12px;
+        margin:-10px 0 0 -10px;
         border: 3px solid rgba(41, 120, 255, 0.54);
-        animation:2000ms pulseIn ease-in-out infinite;
-        // -webkit-animation:2000ms pulseIn ease-in-out infinite;						
+        animation:2000ms pulseIn ease-in-out infinite;					
     }
     
     @keyframes pulseIn{
@@ -55,27 +54,12 @@
             transform:scale(0.2,0.2);
         }
     }
-    
-    @-webkit-keyframes pulseIn{
-        0%{
-            opacity:0;
-            transform:scale(0.2,0.2);
-        }
-        50%{
-            opacity:1;
-            transform:scale(1,1);
-        }
-        100%{
-            opacity:0;
-            transform:scale(0.2,0.2);
-        }
-    }
                 
     .thirdCircle{
-        width:24px;
-        height:24px;
-        border: 3px solid rgba(41, 120, 255, 0.54);
-        margin:-15px 0 0 -15px;
+        width:16px;
+        height:16px;
+        border: 4px solid rgba(41, 120, 255, 0.54);
+        margin:-13px 0 0 -13px;
         animation:2000ms pulseIn 500ms ease-in-out infinite;
     }  
     
@@ -90,10 +74,13 @@
 @media only screen and (max-width: 1200px){
     .AI {
         padding-left: 100px;
+        .pulsatingCircle{
+            transform: scale(4, 4) translate(-6px, 9px);
+        }
 
         p {
             width: auto;
-            text-align: center;
+            // text-align: center;
         }
     }
 } 
@@ -105,6 +92,17 @@
         padding-left: 0;
     }
 }
+
+@media only screen and (max-width: 800px){
+    .AI{
+        padding-left: 80px;
+        
+        p{
+            font-size: 70px;
+        }
+    }
+}
+
 @media only screen and (max-width: 425px){
     .AI{
         margin-top: 120px;
